# Mosaicos

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  a.txt  main  main.cpp  paths
Programas/: main.cpp  makefile
cmake/: Config.cmake.in  FindMosaicos.cmake  InstalationTools.cmake  tools.cmake
diagram/: CMakeCache.txt  Makefile  cmake_install.cmake  mosaico  mosaico.display  mosaico.display.dependers  mosaico.mosaico  mosaico.printable  mosaico.printable.dependers  mosaico.tema.dependers
diagram/src/: Makefile  cmake_install.cmake
diagram/src/display/: Makefile
diagram/src/printable/: Makefile
diagram/src/tema/: Makefile
doc/html/: annotated.html  annotated_dup.js  background_8cpp.html  background_8cpp__incl.map  background_8cpp__incl.md5  background_8cpp_source.html  background_8hpp.html  background_8hpp.js  background_8hpp__dep__incl.map  background_8hpp__dep__incl.md5  background_8hpp__incl.map  background_8hpp__incl.md5  background_8hpp_source.html  background__rag_8hpp.html  background__rag_8hpp.js  background__rag_8hpp__dep__incl.map  background__rag_8hpp__dep__incl.md5  background__rag_8hpp__incl.map  background__rag_8hpp__incl.md5  background__rag_8hpp_source.html  classBackground-members.html  classBackground.html  classBackground.js  classBackground__inherit__graph.map  classBackground__inherit__graph.md5  classBackground_a234cf4803ca2de9e3922d909996f2c90_cgraph.map  classBackground_a234cf4803ca2de9e3922d909996f2c90_cgraph.md5  classBackground_a234cf4803ca2de9e3922d909996f2c90_icgraph.map  classBackground_a234cf4803ca2de9e3922d909996f2c90_icgraph.md5  classBackground_addb936f86b701b964d4be7a886f7c91d_cgraph.map  classBackground_addb936f86b701b964d4be7a886f7c91d_cgraph.md5  classBackground_ae238e598c8bbde8bee6889735783b549_cgraph.map  classBackground_ae238e598c8bbde8bee6889735783b549_cgraph.md5  classColour-members.html  classColour.html  classColour.js  classColour__inherit__graph.map  classColour__inherit__graph.md5  classColour_a8533f264534c973c59b12461ce54f983_icgraph.map  classColour_a8533f264534c973c59b12461ce54f983_icgraph.md5  (+1108 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_f.js  (+75 more)
html/: annotated.html  classDisplay-members.html  classPrintables.html  classShadow-members.html  classSpace.html  classTema-members.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_ff86b140f425c7fd33d63d9b9653ff08.html  display_8hpp_source.html  files.html  index.html  tema_8hpp_source.html
html/search/: classes_0.js  searchdata.js
include/: display.hpp  printables.hpp  tema.hpp
latex/: annotated.tex  classDisplay.eps  classDisplay.tex  classPrintables.eps  classPrintables.tex  classShadow.tex  classSpace.tex  classTema.tex  classTexto.tex  color_8hpp_source.tex  display_8hpp_source.tex  files.tex  hierarchy.tex  printables_8hpp_source.tex  refman.tex  tema_8hpp_source.tex
project/mosaicos/: color.hpp  tema.hpp
source/: CMakeLists.txt  display.cpp  tema.cpp
src/: CMakeLists.txt  Makefile  Remendos.txt  background.cpp  background.hpp  background_rag.hpp  clear.cpp  clear_rag.hpp  cmake_install.cmake  color.hpp  colour.cpp  colour.hpp  colour_rag.hpp  directions.cpp  directions_rag.cpp  directions_rag.hpp  display.cpp  display.hpp  display_rag.hpp  effect.cpp  effect.hpp  effect_rag.hpp  foreground.cpp  foreground.hpp  foreground_rag.hpp  gd_rag.hpp  ground.cpp  ground.hpp  ground_rag.hpp  ios_rag.cpp  ios_rag.hpp  printables.cpp  printables.hpp  scaniables.hpp  str.cpp  str.hpp  str_rag.hpp  tema.cpp  tema.hpp  theme.cpp  (+2 more)
src/display/: CMakeLists.txt  Makefile  cmake_install.cmake  display.hpp
src/printable/: CMakeLists.txt  Makefile  cmake_install.cmake  printables.cpp  printables.hpp
src/tema/: CMakeLists.txt  Makefile  cmake_install.cmake  tema.hpp
